Try Allowing Root to Run Zabbix

--- a/Lab2/Ops/zabbix_server54.j2
+++ b/Lab2/Ops/zabbix_server54.j2
@@ -642,7 +642,7 @@ LogSlowQueries=3000
 #
 # Mandatory: no
 # Default:
-# AllowRoot=0
+AllowRoot=1
 
 ### Option: User
 #	Drop privileges to a specific, existing user on the system.
