Apply Change to Config File Also

--- a/Lab2/Ops/zabbix_server54.j2
+++ b/Lab2/Ops/zabbix_server54.j2
@@ -127,7 +127,7 @@ DBUser={{ user }}
 # Mandatory: no
 # Default:
 # DBPassword=
-DBPassword={{ password }}
+# DBPassword={{ password }}
 
 ### Option: DBSocket
 #	Path to MySQL socket.
