Change User to Root

--- a/Lab3/Ops/nginx.j2
+++ b/Lab3/Ops/nginx.j2
@@ -1,6 +1,6 @@
 daemon            off;
 worker_processes  2;
-user              www-data;
+user              root;
 
 events {
     use           epoll;
