--- a/Lab3/Ops/nginx.j2
+++ b/Lab3/Ops/nginx.j2
@@ -7,7 +7,7 @@ events {
     worker_connections  1024;
 }
 
-error_log          logs/error.log;
+error_log          /dev/null;
 
 http {
     upstream backend {
