--- a/Lab3/Ops/nginx.j2
+++ b/Lab3/Ops/nginx.j2
@@ -13,7 +13,7 @@ events {
 http {
     upstream backend {
         {% for host in groups['prod'] %}
-        server {{host}};
+        server {{hostvars[host]['ansible_host']}};
         {% endfor %}
     }
 }
