--- a/Lab3/default.conf.j2
+++ b/Lab3/default.conf.j2
@@ -1,11 +1,10 @@
 http {
     upstream calWeb {
         least_conn;
-        {% for host in groups[prod] %}
-        {{ item }}
+        {% for host in groups['prod'] %}
+{{hostvars[host]['ansible_default_ipv4']['address']}};
         {% endfor %}
     }
-
     server {
         listen 80;
 
