--- a/Lab3/nginx.conf.j2
+++ b/Lab3/nginx.conf.j2
@@ -12,7 +12,7 @@ events {
 http {
     upstream calWeb {
         least_conn;
-        {% for host in groups['prod'] %} {{hostvars[host]['ansible_default_ipv4']['address']}}; {% endfor %}
+        {% for host in groups['prod'] %}server {{hostvars[host]['ansible_default_ipv4']['address']}}; {% endfor %}
     }
     server {
         listen 80;
