--- a/Lab3/nginx.conf.j2
+++ b/Lab3/nginx.conf.j2
@@ -19,7 +19,7 @@ http {
         listen 443 ssl;
 
         location / {
-            proxy_pass calWeb;
+            proxy_pass http://calWeb;
         }
     }
 }
