update conf for https

--- a/Lab3/Ops/files/nginx.conf.j2
+++ b/Lab3/Ops/files/nginx.conf.j2
@@ -22,7 +22,7 @@ http {
         ssl_certificate_key /etc/ssl/calWeb/calWeb.com.pem;
 
         location / {
-            proxy_pass http://calWeb;
+            proxy_pass https://calWeb;
         }
     }
 }
